Add multiStorage request model