@@ -1,24 +1,41 @@
 package com.quantori.qdp.core.source;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.times;
 
-import com.quantori.qdp.core.source.model.*;
+import com.quantori.qdp.core.source.model.DataLibrary;
+import com.quantori.qdp.core.source.model.DataLibraryType;
+import com.quantori.qdp.core.source.model.DataLoader;
+import com.quantori.qdp.core.source.model.DataSearcher;
+import com.quantori.qdp.core.source.model.DataSource;
+import com.quantori.qdp.core.source.model.DataStorage;
+import com.quantori.qdp.core.source.model.TransformationStep;
+import com.quantori.qdp.core.source.model.TransformationStepBuilder;
 import com.quantori.qdp.core.source.model.molecule.Molecule;
-
-import java.util.*;
+import com.quantori.qdp.core.source.model.molecule.search.FetchWaitMode;
+import com.quantori.qdp.core.source.model.molecule.search.ProcessingSettings;
+import com.quantori.qdp.core.source.model.molecule.search.Request;
+import com.quantori.qdp.core.source.model.molecule.search.RequestStructure;
+import com.quantori.qdp.core.source.model.molecule.search.SearchRequest;
+import com.quantori.qdp.core.source.model.molecule.search.SearchResult;
+import com.quantori.qdp.core.source.model.molecule.search.SearchStrategy;
+import com.quantori.qdp.core.source.model.molecule.search.StorageResultItem;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-
-import com.quantori.qdp.core.source.model.molecule.search.SearchRequest;
-import com.quantori.qdp.core.source.model.molecule.search.SearchResult;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
@@ -28,10 +45,14 @@ class MoleculeServiceTest {
   private static final String TEST_STORAGE_2 = "test_storage-2";
   private static final String LIBRARY_NAME = "qdp_mol_service_name";
   private static final int MAX_UPLOADS = 3;
+  public static final Request BLANK_STORAGE_REQUEST = new Request() {
+  };
+  public static final Function<StorageResultItem, com.quantori.qdp.core.source.model.molecule.search.SearchResultItem>
+      RESULT_ITEM_NUMBER_FUNCTION = i -> new SearchResultItem(((StorageItem) i).getNumber());
 
-  static Stream<SearchRequest.WaitMode> waitModes() {
+  static Stream<FetchWaitMode> waitModes() {
     return Arrays.stream(
-            SearchRequest.WaitMode.values());
+        FetchWaitMode.values());
   }
 
   @SuppressWarnings("unchecked")
@@ -109,21 +130,24 @@ class MoleculeServiceTest {
     MoleculeService service = new MoleculeService();
 
     DataStorage<Molecule> testStorage = new IntRangeDataStorage(10);
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
+            .user("user")
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
+            .storageRequest(BLANK_STORAGE_REQUEST)
+            .resultFilter(i -> true)
+            .resultTransformer(RESULT_ITEM_NUMBER_FUNCTION)
+            .build())
+        .processingSettings(ProcessingSettings.builder()
             .hardLimit(10)
             .pageSize(10)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .storageRequest(new SearchRequest.Request() {
-            })
-            .resultFilter(i -> true)
-            .resultTransformer(i -> new SearchResultItem(((StorageItem)i).getNumber()))
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .user("user")
-            .build();
+            .build())
+        .build();
     List<SearchResultItem> resultItems = new ArrayList<>();
     SearchResult searchResult = service.search(request).toCompletableFuture().join();
     assertEquals(10, searchResult.getResults().size());
@@ -151,7 +175,7 @@ class MoleculeServiceTest {
     assertEquals(6, searchResult.getResults().size());
     assertTrue(searchResult.isSearchFinished());
     resultItems.addAll((Collection<? extends SearchResultItem>) searchResult.getResults());
-    String actual = resultItems.stream().map(item -> item.getNumber()).collect(Collectors.joining(""));
+    String actual = resultItems.stream().map(SearchResultItem::getNumber).collect(Collectors.joining(""));
     String expected = IntStream.range(0, 100).mapToObj(Integer::toString).collect(Collectors.joining(""));
     assertEquals(expected, actual);
   }
@@ -159,26 +183,28 @@ class MoleculeServiceTest {
 
   @ParameterizedTest(name = "testSearchInLoop ({arguments})")
   @MethodSource("waitModes")
-  void testSearchInLoop(SearchRequest.WaitMode waitMode) {
+  void testSearchInLoop(FetchWaitMode fetchWaitMode) {
     MoleculeService service = new MoleculeService();
 
     DataStorage<Molecule> testStorage = new IntRangeDataStorage(10);
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
+            .user("user")
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
+            .storageRequest(BLANK_STORAGE_REQUEST)
+            .resultFilter(i -> true)
+            .resultTransformer(RESULT_ITEM_NUMBER_FUNCTION)
+            .build())
+        .processingSettings(ProcessingSettings.builder()
             .hardLimit(8)
             .pageSize(8)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .waitMode(waitMode)
-            .storageRequest(new SearchRequest.Request() {
-            })
-            .resultFilter(i -> true)
-            .resultTransformer(i -> new SearchResultItem(((StorageItem)i).getNumber()))
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .user("user")
-            .build();
+            .build())
+        .build();
     List<SearchResultItem> resultItems = new ArrayList<>();
     SearchResult searchResult = service.search(request).toCompletableFuture().join();
     resultItems.addAll((Collection<? extends SearchResultItem>)searchResult.getResults());
@@ -186,7 +212,7 @@ class MoleculeServiceTest {
       searchResult = service.nextSearchResult(searchResult.getSearchId(), 8, "user").toCompletableFuture().join();
       resultItems.addAll((Collection<? extends SearchResultItem>)searchResult.getResults());
     }
-    String actual = resultItems.stream().map(item -> item.getNumber()).collect(Collectors.joining(""));
+    String actual = resultItems.stream().map(SearchResultItem::getNumber).collect(Collectors.joining(""));
     String expected = IntStream.range(0, 100).mapToObj(Integer::toString).collect(Collectors.joining(""));
     assertEquals(expected, actual);
   }
@@ -195,66 +221,76 @@ class MoleculeServiceTest {
   void testSearchExceptionInTransformer() {
     MoleculeService service = new MoleculeService();
     DataStorage<Molecule> testStorage = new IntRangeDataStorage(10);
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
-            .hardLimit(10)
-            .pageSize(10)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .storageRequest(new SearchRequest.Request() {
-            })
+            .storageRequest(BLANK_STORAGE_REQUEST)
             .resultFilter(i -> true)
-            .resultTransformer(i ->  {
-              SearchResultItem result = new SearchResultItem(((StorageItem)i).getNumber());
+            .resultTransformer(i -> {
+              SearchResultItem result = new SearchResultItem(((StorageItem) i).getNumber());
               if (result.getNumber().equals("5")) {
                 throw new RuntimeException("wrong number");
               }
               return result;
             })
+            .build())
+        .processingSettings(ProcessingSettings.builder()
+            .hardLimit(10)
+            .pageSize(10)
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .build();
+            .build())
+        .build();
+
     SearchResult searchResult = service.search(request).toCompletableFuture().join();
     assertEquals(10, searchResult.getResults().size());
     assertEquals(IntStream.range(0, 11).filter(i -> i != 5).mapToObj(Integer::toString).collect(Collectors.toList()),
-            ((List<SearchResultItem>)searchResult.getResults()).stream().map(SearchResultItem::getNumber).collect(Collectors.toList()));
+            ((List<SearchResultItem>)searchResult.getResults()).stream()
+                .map(SearchResultItem::getNumber).toList());
   }
 
   @Test
   void testSearchExceptionInFilter() {
     MoleculeService service = new MoleculeService();
     DataStorage<Molecule> testStorage = new IntRangeDataStorage(10);
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
-            .hardLimit(10)
-            .pageSize(10)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .storageRequest(new SearchRequest.Request() {
-            })
-            .resultFilter( i -> {
-              if (((StorageItem)i).getNumber() % 2 == 0) {
+            .storageRequest(BLANK_STORAGE_REQUEST)
+            .resultFilter(i -> {
+              if (((StorageItem) i).getNumber() % 2 == 0) {
                 throw new RuntimeException("wrong number");
               }
               return true;
             })
-            .resultTransformer(i -> new SearchResultItem(((StorageItem)i).getNumber()))
+            .resultTransformer(RESULT_ITEM_NUMBER_FUNCTION)
+            .build())
+        .processingSettings(ProcessingSettings.builder()
+            .hardLimit(10)
+            .pageSize(10)
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .build();
+            .build())
+        .build();
+
     SearchResult searchResult = service.search(request).toCompletableFuture().join();
     assertEquals(10, searchResult.getResults().size());
     assertEquals(IntStream.range(0, 20).filter(i -> (i % 2) != 0).mapToObj(Integer::toString).collect(Collectors.toList()),
-            ((List<SearchResultItem>)searchResult.getResults()).stream().map(SearchResultItem::getNumber).collect(Collectors.toList()));
+            ((List<SearchResultItem>)searchResult.getResults()).stream()
+                .map(SearchResultItem::getNumber).toList());
   }
 
   @Test
   void testSearchExceptionInDataSearcher() {
     MoleculeService service = new MoleculeService();
     String errorMessage = "Cannot load data";
-    DataStorage<Molecule> testStorage = new DataStorage<Molecule>() {
+    DataStorage<Molecule> testStorage = new DataStorage<>() {
       @Override
       public DataSearcher dataSearcher(SearchRequest searchRequest) {
         return new DataSearcher() {
@@ -262,12 +298,12 @@ class MoleculeServiceTest {
           int count;
 
           @Override
-          public List<? extends SearchRequest.StorageResultItem> next() {
+          public List<? extends StorageResultItem> next() {
             if (count == 0) {
               count++;
               return IntStream.range(0, 5)
-                      .mapToObj(StorageItem::new)
-                      .collect(Collectors.toList());
+                  .mapToObj(StorageItem::new)
+                  .collect(Collectors.toList());
 
             } else {
               throw new RuntimeException(errorMessage);
@@ -275,28 +311,32 @@ class MoleculeServiceTest {
           }
 
           @Override
-          public void close() throws Exception {
+          public void close() {
 
           }
         };
       }
     };
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
-            .hardLimit(10)
-            .pageSize(10)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .storageRequest(new SearchRequest.Request() {
-            })
-            .resultFilter( i -> true)
-            .resultTransformer(i -> new SearchResultItem(((StorageItem)i).getNumber()))
+            .storageRequest(BLANK_STORAGE_REQUEST)
+            .resultFilter(i -> true)
+            .resultTransformer(RESULT_ITEM_NUMBER_FUNCTION)
+            .build())
+        .processingSettings(ProcessingSettings.builder()
+            .hardLimit(8)
+            .pageSize(8)
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .build();
-      CompletionException completionException = assertThrows(CompletionException.class, () -> service.search(request).toCompletableFuture().join());
-      assertTrue(completionException.getMessage().contains(errorMessage));
+            .build())
+        .build();
+    CompletionException completionException =
+        assertThrows(CompletionException.class, () -> service.search(request).toCompletableFuture().join());
+    assertTrue(completionException.getMessage().contains(errorMessage));
   }
 
 
@@ -310,26 +350,31 @@ class MoleculeServiceTest {
         throw new RuntimeException(errorMessage);
       }
     };
-    service.registerMoleculeStorage(testStorage, TEST_STORAGE,100);
+    service.registerMoleculeStorage(testStorage, TEST_STORAGE, 100);
     var request = SearchRequest.builder()
+        .requestStructure(RequestStructure.builder()
             .storageName(TEST_STORAGE)
             .indexNames(List.of("testIndex"))
-            .hardLimit(10)
-            .pageSize(10)
-            .strategy(SearchRequest.SearchStrategy.PAGE_FROM_STREAM)
-            .storageRequest(new SearchRequest.Request() {
-            })
-            .resultFilter( i -> true)
-            .resultTransformer(i -> new SearchResultItem(((StorageItem)i).getNumber()))
+            .storageRequest(BLANK_STORAGE_REQUEST)
+            .resultFilter(i -> true)
+            .resultTransformer(RESULT_ITEM_NUMBER_FUNCTION)
+            .build())
+        .processingSettings(ProcessingSettings.builder()
+            .hardLimit(8)
+            .pageSize(8)
+            .strategy(SearchStrategy.PAGE_FROM_STREAM)
             .bufferSize(15)
             .parallelism(1)
-            .build();
-    CompletionException completionException = assertThrows(CompletionException.class, () -> service.search(request).toCompletableFuture().join());
+            .build())
+        .build();
+    CompletionException completionException =
+        assertThrows(CompletionException.class, () -> service.search(request).toCompletableFuture().join());
     assertTrue(completionException.getMessage().contains(errorMessage));
   }
 
-  public static class StorageItem implements SearchRequest.StorageResultItem {
+  public static class StorageItem implements StorageResultItem {
     private final int number;
+
     public StorageItem(int i) {
       this.number = i;
     }
@@ -341,6 +386,7 @@ class MoleculeServiceTest {
 
   public static class SearchResultItem implements com.quantori.qdp.core.source.model.molecule.search.SearchResultItem {
     private final String number;
+
     public SearchResultItem(int number) {
       this.number = Integer.toString(number);
     }
@@ -352,8 +398,8 @@ class MoleculeServiceTest {
     @Override
     public String toString() {
       return "SearchResultItem{" +
-              "number='" + number + '\'' +
-              '}';
+          "number='" + number + '\'' +
+          '}';
     }
   }
 
@@ -369,14 +415,15 @@ class MoleculeServiceTest {
     public DataSearcher dataSearcher(SearchRequest searchRequest) {
       return new DataSearcher() {
         int counter;
+
         @Override
-        public List<? extends SearchRequest.StorageResultItem> next() {
+        public List<? extends StorageResultItem> next() {
           if (counter >= chunks) {
             return List.of();
           } else {
-            List<SearchRequest.StorageResultItem> result = IntStream.range(counter*10, (counter + 1)*10)
-                    .mapToObj(StorageItem::new)
-                    .collect(Collectors.toList());
+            List<StorageResultItem> result = IntStream.range(counter * 10, (counter + 1) * 10)
+                .mapToObj(StorageItem::new)
+                .collect(Collectors.toList());
             counter++;
             return result;
           }
